# learner

./: README.md  pyproject.toml
reports/: 20260306_1311_grpo_cold_start.md  20260306_1353_sft_grpo_carry_still_zero.md  20260306_1701_multi_machine_framework.md  20260306_fix_encoding_carry_solved.md
src/learner/cli/: client.py  main.py
src/learner/cli/commands/: analyze.py  grpo.py  health.py  hybrid.py  model.py  server.py  sft_grpo.py  tm.py  train.py
src/learner/core/: analysis.py  checkpoint.py  data.py  encoding.py  grpo.py  machines.py  model.py  tm.py  trainer.py  trainer_grpo.py  trainer_hybrid.py  trainer_sft_grpo.py
src/learner/core/machines/: __init__.py  tm0001.py  tm0002.py  tm0003.py  tm0004.py  tm0005.py
src/learner/server/: main.py
src/learner/server/routes/: analyze.py  grpo.py  health.py  hybrid.py  model.py  sft_grpo.py  tm.py  train.py
